Solved problems related to grouping of processes
