# src/main/resources/api.yml
@@ -383,7 +383,7 @@ paths:
           description: Business Process Instance Started
           schema:
             $ref: '#/definitions/ProcessInstance'
-  /start/{processInstanceId}/{groupId}:
+  /start/createGroup/{processInstanceId}/{groupId}:
     post:
       operationId: createProcessInstanceGroup
       consumes:
@@ -406,7 +406,7 @@ paths:
         name: groupId
         required: true
         type: string
-  /start/{processInstanceId}:
+  /start/addToGroup/{processInstanceId}:
     patch:
       operationId: addNewProcessInstanceToGroup
       consumes:
@@ -446,6 +446,14 @@ paths:
         name: gid
         description: The UUID of the process instance group owned by the party continuing the process
         required: false
+        type: string
+      - in: query
+        name: federationInstanceId
+        required: true
+        type: string
+      - in: query
+        name: initiatorInstanceId
+        required: true
         type: string
       - name: Authorization
         in: header
